--- a/projects.html
+++ b/projects.html
@@ -2,5 +2,5 @@
 <html>
     <body>
         <h1>This is where projects will go.</h1>
-        <p href="https://youtu.be/dQw4w9WgXcQ?si=FBDSqnwwTj6gpJKI">For Now</p>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=FBDSqnwwTj6gpJKI">For Now</a>
     </body>
