--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
     <body>
         <h1>Hello World</h1>
         <p>This is currently a work in progress</p>
+        <a href="projects.html">Projects</a>
     </body>
