--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
         <h1>Hello World</h1>
         <p>This is currently a work in progress</p>
         <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <p>This might be for resume. Not sure yet.</p>>
     </body>
