--- a/about.html
+++ b/about.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <script src="java.js"></script>
+</head>
+<body>
+    <div id="header"></div>
+    <script>loadHTML('header.html', 'header');</script>
 <html>
     <body>
         <h1>About Me</h1>
