--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <script src="java.js"></script>
+</head>
+<body>
+    <div id="header"></div>
+    <script>loadHTML('header.html', 'header');</script>
 <html>
     <body>
         <h1>Hello World</h1>
         <p>This is currently a work in progress</p>
         <a href="projects.html">Projects</a>
         <a href="about.html">About</a>
-        <p>This might be for resume. Not sure yet.</p>>
+        <p>This might be for resume. Not sure yet.</p>
     </body>
+</html>
