--- a/header.html
+++ b/header.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
 <header>
-    <body>
-        <h1>Trial</h1>
-        <p>Here's an option</p><br>
-        <p>here's another option</p>
-    </body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <p>Maybe for Resume</p>
+    </nav>
 </header>
