--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,5 @@
 <body>
     <div id="header"></div>
     <script>loadHTML('header.html', 'header');</script>
-<html>
-    <body>
-        <h1>This is where projects will go.</h1>
-        <a href="https://youtu.be/dQw4w9WgXcQ?si=FBDSqnwwTj6gpJKI" target="_blank">For Now</a>
-    </body>
+<h1>Projects</h1>
+    <a href="https://github.com/Sneakingbox198/Weather-App">Weather App</a>
