Update to projects
Added a link to the To Do list

--- a/projects.html
+++ b/projects.html
@@ -11,3 +11,4 @@
     <script>loadHTML('header.html', 'header');</script>
 <h1>Projects</h1>
     <a href="https://github.com/Sneakingbox198/Weather-App">Weather App</a>
+    <a href="https://github.com/Sneakingbox198/To-Do-List">>To-Do List</a>
